# data_source

./: .gitignore  Cargo.toml
migrations/2026-02-11-192643-0000_create_users/: down.sql  up.sql
migrations/2026-02-11-194856-0000_classes/: up.sql
migrations/2026-02-11-195838-0000_students/: up.sql
migrations/2026-02-11-200523-0000_instructors/: down.sql  up.sql
migrations/2026-02-11-200759-0000_courses/: down.sql  up.sql
migrations/2026-02-11-201008-0000_enrollments/: down.sql  up.sql
migrations/2026-02-11-201430-0000_assignments/: down.sql  up.sql
migrations/2026-05-07-120718-0000_add_schedule_to_assignments/: down.sql  up.sql
seeder/: main.py  pyproject.toml  seed_data.py
src/: db.rs  main.rs  models.rs  schema.rs
